tests/parsing/inst_prop_conflict/stderr.golden
error: cannot set 'range' property, because 'width' property is already set in line 3 column 3
bus.fbd +4:3
   |
 4 | 		range = [0, 10]
   | 		^^^^^
